--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,11 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "prisma": "^5.15.1"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.15.1"
+  }
 }
