--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,40 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "prisma": "^5.15.1"
-  },
   "dependencies": {
-    "@prisma/client": "^5.15.1"
+    "@aws-sdk/client-s3": "^3.617.0",
+    "@aws-sdk/lib-storage": "^3.501.0",
+    "@aws-sdk/s3-request-presigner": "^3.620.0",
+    "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "prisma": "^5.17.0",
+    "qrcode": "^1.5.4",
+    "sharp": "^0.33.4",
+    "typescript": "^5.5.3",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
+    "@types/node": "^20.14.11",
+    "@types/uuid": "^10.0.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2"
   }
 }
