--- a/client/app.json
+++ b/client/app.json
@@ -9,7 +9,9 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "usesAppleSignIn": true,
+      "plugins": ["expo-apple-authentication"]
     },
     "android": {
       "adaptiveIcon": {
