--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^4.0.1",
-    "expo-image": "~2.0.4"
+    "expo-image": "~2.0.4",
+    "expo-apple-authentication": "~7.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
