--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "start": "npx nodemon"
   },
   "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-},
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.10.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "prisma": "^5.17.0",
     "qrcode": "^1.5.4",
     "sharp": "^0.33.4",
