--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,17 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.65.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "expo": "~52.0.28",
+    "expo-apple-authentication": "~7.1.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -45,9 +48,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^4.0.1",
-    "expo-image": "~2.0.4",
-    "expo-apple-authentication": "~7.1.3"
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
