--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -43,14 +44,15 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-qrcode-svg": "^6.3.14",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^4.0.1",
-    "expo-linear-gradient": "~14.0.2"
+    "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
